data/derived/comb/progs/unify/prog5475.ml.out
Characters 28-31:
  let _ = exprToString (Power(2.4, 5.3));;
                              ^^^
Error: This expression has type float but an expression was expected of type
         expr
